TypedLama/regression/compile_error/test001.3.lama
local zz :: Str = 1;